Revamp SD card UX
Improve the SD card setup flow so that each formatting option is provided in a separate screen with clear description and illustration.Also make sure that guest users do not have any access to formatting options.

Test: Manual testing on Pixel Device
Screenshot1: https://screenshot.googleplex.com/WJwyxFkBtbSfZmN.png
Screenshot2: https://screenshot.googleplex.com/3oBcrrgRsKTxNPC.png

Bug: 201252175
Change-Id: I77df55c40fd99cabcfc6128084be035bb5b19531

Change-Id: I757abc6076fcc8f467d8faed9f090bcdd5774ff3
(cherry picked from commit 47264c4e179f6b4634ace982020afee2cc70972f [formerly 9b432d54a68abf49702db1d6dc2823307f0750ff])
Merged-In: I757abc6076fcc8f467d8faed9f090bcdd5774ff3

Former-commit-id: efdedcdc159c0207bf075240aa74245ea5575fb4

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -506,4 +506,6 @@
     <dimen name="qrcode_preview_margin">40dp</dimen>
     <dimen name="qrcode_preview_radius">30dp</dimen>
     <dimen name="qrcode_icon_size">27dp</dimen>
+    <!-- Margin for SD card setup completion Image -->
+    <dimen name="setup_completion_margin_top">88dp</dimen>
 </resources>
