--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -633,4 +633,7 @@
         <item>@string/config_settingsintelligence_package_name</item>
         <item>android.uid.system:1000</item>
     </string-array>
+
+    <!-- Whether to enable the app battery usage list page feature. -->
+    <bool name="config_app_battery_usage_list_enabled">false</bool>
 </resources>
