--- a/res/layout/battery_chart_graph.xml
+++ b/res/layout/battery_chart_graph.xml
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="170dp"
         android:layout_marginBottom="16dp"
-        android:visibility="invisible"
+        android:visibility="gone"
         android:contentDescription="@string/battery_usage_chart"
         android:textAppearance="?android:attr/textAppearanceSmall"
         settings:textColor="?android:attr/textColorSecondary" />
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="170dp"
         android:layout_marginBottom="16dp"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:contentDescription="@string/battery_usage_chart"
         android:textAppearance="?android:attr/textAppearanceSmall"
         settings:textColor="?android:attr/textColorSecondary" />
