--- a/res/values-or/arrays.xml
+++ b/res/values-or/arrays.xml
@@ -509,8 +509,8 @@
     <item msgid="2047166446768045816">"ମିଟର୍ ହୋଇନଥିବା ରୂପେ ବିବେଚନା କରନ୍ତୁ"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
-    <item msgid="3485945604919292489">"ରେଣ୍ଡମାଇଜ୍ MAC ବ୍ୟବହାର କରନ୍ତୁ (ଡିଫଲ୍ଟ)"</item>
-    <item msgid="741680937828608749">"MAC ଡିଭାଇସ୍ ବ୍ୟବହାର କରନ୍ତୁ"</item>
+    <item msgid="3485945604919292489">"ରେଣ୍ଡମାଇଜ୍ଡ MAC ବ୍ୟବହାର କରନ୍ତୁ (ଡିଫଲ୍ଟ)"</item>
+    <item msgid="741680937828608749">"MAC ଡିଭାଇସ ବ୍ୟବହାର କରନ୍ତୁ"</item>
   </string-array>
   <string-array name="wifi_hidden_entries">
     <item msgid="342232116597649254">"ନା"</item>
@@ -526,7 +526,7 @@
     <item msgid="8657797891533816070">"ଶବ୍ଦବହୁଳ"</item>
   </string-array>
   <string-array name="cdma_system_select_choices">
-    <item msgid="1205665684426617345">"କେବଳ ହୋମ୍ ନେଟ୍‌ୱର୍କ"</item>
+    <item msgid="1205665684426617345">"କେବଳ ହୋମ"</item>
     <item msgid="6691772120712000966">"ଅଟୋମେଟିକ"</item>
   </string-array>
   <string-array name="preferred_network_mode_choices">
