Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I242dbec711ce4b0367cefb3795a31791c2549455

Former-commit-id: 63567e48bcc484ab6bce49a16d5ad4da4cec4b60

--- a/res/values-or/arrays.xml
+++ b/res/values-or/arrays.xml
@@ -473,7 +473,7 @@
     <item msgid="5777152116210127847">"ଶ୍ରେଷ୍ଠ ଗତିବିଧି"</item>
     <item msgid="1834030155560727324">"ଜରୁରୀ (ଫୋର୍‌ଗ୍ରାଉଣ୍ଡ)"</item>
     <item msgid="8494424742994426350">"ଗୁରୁତ୍ଵପୁର୍ଣ୍ଣ (ପୃଷ୍ଠପଟ)"</item>
-    <item msgid="5099332663422156149">"ବ୍ୟାକଅପ୍"</item>
+    <item msgid="5099332663422156149">"ବ୍ୟାକଅପ"</item>
     <item msgid="7701089238529887617">"ଭାରୀ"</item>
     <item msgid="3006466648960525485">"ସେବା (ଚାଲୁଛି)"</item>
     <item msgid="2253476667031759713">"ସେବା (ରିଷ୍ଟାର୍ଟ ହେଉଛି)"</item>
