--- a/res/values-ro/arrays.xml
+++ b/res/values-ro/arrays.xml
@@ -107,7 +107,7 @@
   <string-array name="eap_ocsp_type">
     <item msgid="8568170800958331461">"Nu verificați"</item>
     <item msgid="5703177653586269306">"Solicitați starea certificatelor"</item>
-    <item msgid="326388247868439528">"Solicitați obligatoriu starea certificatelor"</item>
+    <item msgid="326388247868439528">"Solicită obligatoriu starea certificatelor"</item>
   </string-array>
   <string-array name="wifi_p2p_wps_setup">
     <item msgid="1446717102923442720">"Buton WPS"</item>
@@ -222,7 +222,7 @@
   <string-array name="app_install_location_entries">
     <item msgid="3771157789865587832">"Stocare internă pe dispozitiv"</item>
     <item msgid="5501345333507193420">"Card SD detașabil"</item>
-    <item msgid="2362840341195111674">"Permiteți sistemului să decidă"</item>
+    <item msgid="2362840341195111674">"Permite sistemului să decidă"</item>
   </string-array>
   <string-array name="app_ops_categories">
     <item msgid="528483497841471005">"Locație"</item>
@@ -314,7 +314,7 @@
     <item msgid="8112680908829570200">"Locație"</item>
     <item msgid="5019327268152480733">"Apelează un telefon"</item>
     <item msgid="8001855901083066554">"Citiți mesaje SMS/MMS"</item>
-    <item msgid="187744670643011148">"Scrieți mesaje SMS/MMS"</item>
+    <item msgid="187744670643011148">"Scrie mesaje SMS/MMS"</item>
     <item msgid="3324078624274013835">"Primește mesaje SMS/MMS"</item>
     <item msgid="1924065490920451511">"Primește mesaje SMS/MMS"</item>
     <item msgid="1239934115787777477">"Primește mesaje SMS/MMS"</item>
@@ -342,8 +342,8 @@
     <item msgid="1148968792599973150">"Păstrare în activitate"</item>
     <item msgid="8482874682804856549">"Locație"</item>
     <item msgid="5186169827582545242">"Locație"</item>
-    <item msgid="6122293931012635638">"Obțineți statistici de utilizare"</item>
-    <item msgid="2526677383312751932">"Activați/dezactivați microfonul"</item>
+    <item msgid="6122293931012635638">"Obține statistici de utilizare"</item>
+    <item msgid="2526677383312751932">"Activezi/dezactivezi microfonul"</item>
     <item msgid="4000577305179914546">"Afișează semnalarea"</item>
     <item msgid="8660207174515570558">"Proiectează conținutul media"</item>
     <item msgid="3904996949561946108">"Activează serviciul VPN"</item>
@@ -452,7 +452,7 @@
   </string-array>
   <string-array name="security_settings_premium_sms_values">
     <item msgid="3985605994234635072">"Întreabă"</item>
-    <item msgid="2358187544264718285">"Nu permiteți niciodată"</item>
+    <item msgid="2358187544264718285">"Nu permite niciodată"</item>
     <item msgid="7043782324123900484">"Permiteți întotdeauna"</item>
   </string-array>
   <string-array name="ram_states">
