--- a/res/values-or/arrays.xml
+++ b/res/values-or/arrays.xml
@@ -467,7 +467,7 @@
     <item msgid="5777152116210127847">"ଶ୍ରେଷ୍ଠ ଗତିବିଧି"</item>
     <item msgid="1834030155560727324">"ଜରୁରୀ (ଫୋର୍‌ଗ୍ରାଉଣ୍ଡ)"</item>
     <item msgid="8494424742994426350">"ଗୁରୁତ୍ଵପୁର୍ଣ୍ଣ (ପୃଷ୍ଠପଟ)"</item>
-    <item msgid="5099332663422156149">"ବ୍ୟାକଅପ୍"</item>
+    <item msgid="5099332663422156149">"ବ୍ୟାକଅପ"</item>
     <item msgid="7701089238529887617">"ଭାରୀ"</item>
     <item msgid="3006466648960525485">"ସେବା (ଚାଲୁଛି)"</item>
     <item msgid="2253476667031759713">"ସେବା (ରିଷ୍ଟାର୍ଟ ହେଉଛି)"</item>
@@ -503,7 +503,7 @@
     <item msgid="2047166446768045816">"ମିଟର୍ ହୋଇନଥିବା ରୂପେ ବିବେଚନା କରନ୍ତୁ"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
-    <item msgid="3485945604919292489">"ରେଣ୍ଡମାଇଜ୍ MAC ବ୍ୟବହାର କରନ୍ତୁ (ଡିଫଲ୍ଟ)"</item>
+    <item msgid="3485945604919292489">"ରେଣ୍ଡମାଇଜ୍ଡ MAC ବ୍ୟବହାର କରନ୍ତୁ (ଡିଫଲ୍ଟ)"</item>
     <item msgid="741680937828608749">"MAC ଡିଭାଇସ ବ୍ୟବହାର କରନ୍ତୁ"</item>
   </string-array>
   <string-array name="wifi_hidden_entries">
@@ -520,7 +520,7 @@
     <item msgid="8657797891533816070">"ଶବ୍ଦବହୁଳ"</item>
   </string-array>
   <string-array name="cdma_system_select_choices">
-    <item msgid="1205665684426617345">"କେବଳ ହୋମ୍ ନେଟ୍‌ୱର୍କ"</item>
+    <item msgid="1205665684426617345">"କେବଳ ହୋମ"</item>
     <item msgid="6691772120712000966">"ଅଟୋମେଟିକ"</item>
   </string-array>
   <string-array name="preferred_network_mode_choices">
