--- a/res/values-pt-rPT/arrays.xml
+++ b/res/values-pt-rPT/arrays.xml
@@ -503,8 +503,8 @@
     <item msgid="2047166446768045816">"Tratar como acesso ilimitado"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
-    <item msgid="3485945604919292489">"Utilizar MAC aleatório (predefinição)"</item>
-    <item msgid="741680937828608749">"Utilizar MAC do dispositivo"</item>
+    <item msgid="3485945604919292489">"Usar MAC aleatório (predefinição)"</item>
+    <item msgid="741680937828608749">"Usar MAC do dispositivo"</item>
   </string-array>
   <string-array name="wifi_hidden_entries">
     <item msgid="342232116597649254">"Não"</item>
