Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ib9934ffcc3320369f5613ce296a2ea495d362d0c

Former-commit-id: 5bdbb106d4e4ddb535d6e8ccf956e4cc0089d9f8

--- a/res/values-ro/arrays.xml
+++ b/res/values-ro/arrays.xml
@@ -99,7 +99,7 @@
     <!-- no translation found for wifi_tether_security:2 (6851763638266088835) -->
     <!-- no translation found for wifi_tether_security:3 (5512131148045414341) -->
   <string-array name="eap_ocsp_type">
-    <item msgid="8568170800958331461">"Nu verificați"</item>
+    <item msgid="8568170800958331461">"Nu verifica"</item>
     <item msgid="5703177653586269306">"Solicitați starea certificatelor"</item>
     <item msgid="326388247868439528">"Solicită obligatoriu starea certificatelor"</item>
   </string-array>
@@ -122,7 +122,7 @@
     <item msgid="4241913314075719627">"Fără timp limită"</item>
   </string-array>
   <string-array name="bluetooth_max_connected_audio_devices">
-    <item msgid="4792793579224104167">"Utilizați setarea prestabilită a sistemului: <xliff:g id="DEFAULT_BLUETOOTH_MAX_CONNECTED_AUDIO_DEVICES">%1$d</xliff:g>"</item>
+    <item msgid="4792793579224104167">"Folosește setarea prestabilită a sistemului: <xliff:g id="DEFAULT_BLUETOOTH_MAX_CONNECTED_AUDIO_DEVICES">%1$d</xliff:g>"</item>
     <item msgid="5818942631838356082">"1"</item>
     <item msgid="4804155564025402919">"2"</item>
     <item msgid="7123296338505723878">"3"</item>
@@ -138,7 +138,7 @@
   </string-array>
   <string-array name="data_usage_data_range">
     <item msgid="3528385925116637939">"Ultimele 30 de zile"</item>
-    <item msgid="3356834403629955571">"Setați ciclu utilizare..."</item>
+    <item msgid="3356834403629955571">"Setează ciclu utilizare..."</item>
   </string-array>
   <string-array name="usage_stats_display_order_types">
     <item msgid="7527014644010884448">"Durată de utilizare"</item>
@@ -307,7 +307,7 @@
     <item msgid="6657539556093198883">"Postează o notificare"</item>
     <item msgid="8112680908829570200">"Locație"</item>
     <item msgid="5019327268152480733">"Apelează un telefon"</item>
-    <item msgid="8001855901083066554">"Citiți mesaje SMS/MMS"</item>
+    <item msgid="8001855901083066554">"Citește mesaje SMS/MMS"</item>
     <item msgid="187744670643011148">"Scrie mesaje SMS/MMS"</item>
     <item msgid="3324078624274013835">"Primește mesaje SMS/MMS"</item>
     <item msgid="1924065490920451511">"Primește mesaje SMS/MMS"</item>
@@ -447,7 +447,7 @@
   <string-array name="security_settings_premium_sms_values">
     <item msgid="3985605994234635072">"Întreabă"</item>
     <item msgid="2358187544264718285">"Nu permite niciodată"</item>
-    <item msgid="7043782324123900484">"Permiteți întotdeauna"</item>
+    <item msgid="7043782324123900484">"Permite întotdeauna"</item>
   </string-array>
   <string-array name="ram_states">
     <item msgid="335564863849202240">"Normală"</item>
@@ -504,7 +504,7 @@
   </string-array>
   <string-array name="wifi_privacy_entries">
     <item msgid="3485945604919292489">"Folosiți o adresă MAC aleatorie (prestabilit)"</item>
-    <item msgid="741680937828608749">"Folosiți adresa MAC a dispozitivului"</item>
+    <item msgid="741680937828608749">"Folosește adresa MAC a dispozitivului"</item>
   </string-array>
   <string-array name="wifi_hidden_entries">
     <item msgid="342232116597649254">"Nu"</item>
