Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I08d15308d2597efc1683aa3ca74eaf6ca69bab47

Former-commit-id: c1cf6de04d5fd4e1587442578e754b2817715933

--- a/res/values-or/arrays.xml
+++ b/res/values-or/arrays.xml
@@ -366,7 +366,7 @@
     <item msgid="2114661179947426734">"ଦିବ୍ୟାଙ୍ଗମାନଙ୍କ ପାଇଁ ସୁବିଧାଗୁଡ଼ିକର ଭଲ୍ୟୁମ୍‌"</item>
   </string-array>
   <string-array name="long_press_timeout_selector_titles">
-    <item msgid="6926391290986427331">"କମ୍"</item>
+    <item msgid="6926391290986427331">"କମ"</item>
     <item msgid="5118829513010894576">"ମଧ୍ୟମ"</item>
     <item msgid="6740026006576843477">"ଲମ୍ଵା"</item>
   </string-array>
