--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -230,6 +230,10 @@
          fingerprint_finish_max_size = fingerprint_progress_bar_max_size
                   + (fingerprint_enrolling_content_margin_vertical x 2) -->
     <dimen name="fingerprint_finish_max_size">288dp</dimen>
+    <dimen name="sfps_progress_bar_translate_x">2dp</dimen>
+    <dimen name="sfps_progress_bar_translate_y">2dp</dimen>
+    <dimen name="sfps_lottie_translate_x">12dp</dimen>
+    <dimen name="sfps_lottie_translate_y">12dp</dimen>
     <dimen name="udfps_lottie_translate_y">0dp</dimen>
 
     <!-- Face -->
