Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I6ca040c30f6340f821f0bab6643047f54bd7a250

Former-commit-id: 845f3bc9962fa49b578bae0de26987c8b22c874d

--- a/res/values-pt-rPT/arrays.xml
+++ b/res/values-pt-rPT/arrays.xml
@@ -61,20 +61,6 @@
     <item msgid="5473541238056528086">"Bloqueado"</item>
     <item msgid="1114588261171522603">"A evitar temporariamente uma ligação fraca"</item>
   </string-array>
-  <string-array name="wifi_status_with_ssid">
-    <item msgid="1528087426723432177"></item>
-    <item msgid="155483314608049961">"A procurar..."</item>
-    <item msgid="3409219643606946053">"A ligar a <xliff:g id="NETWORK_NAME">%1$s</xliff:g>…"</item>
-    <item msgid="7891463004457278422">"A autenticar com <xliff:g id="NETWORK_NAME">%1$s</xliff:g>…"</item>
-    <item msgid="3193388999810487137">"A obter endereço IP de <xliff:g id="NETWORK_NAME">%1$s</xliff:g>…"</item>
-    <item msgid="2227930004124157952">"Ligado a <xliff:g id="NETWORK_NAME">%1$s</xliff:g>"</item>
-    <item msgid="7104168043537022445">"Suspenso"</item>
-    <item msgid="2595938203187002544">"A desligar de <xliff:g id="NETWORK_NAME">%1$s</xliff:g>…"</item>
-    <item msgid="2435175968703898648">"Desligado"</item>
-    <item msgid="4804573668906374228">"Sem sucesso"</item>
-    <item msgid="4036325515437530221">"Bloqueado"</item>
-    <item msgid="8883455894013518008">"A evitar temporariamente uma ligação fraca"</item>
-  </string-array>
     <!-- no translation found for wifi_tether_security:0 (6312112980634811065) -->
     <!-- no translation found for wifi_tether_security:1 (1428294025896439258) -->
     <!-- no translation found for wifi_tether_security:2 (6851763638266088835) -->
@@ -105,11 +91,6 @@
     <item msgid="8545211062334016668">"Suficiente"</item>
     <item msgid="7468449584777730187">"Boa"</item>
     <item msgid="202124107702016530">"Excelente"</item>
-  </string-array>
-  <string-array name="usage_stats_display_order_types">
-    <item msgid="7527014644010884448">"Tempo de utilização"</item>
-    <item msgid="4631872897572423215">"Última utilização"</item>
-    <item msgid="2647568941623179473">"Nome da aplicação"</item>
   </string-array>
   <string-array name="wifi_peap_phase2_entries">
     <item msgid="8082624033981656770">"MSCHAPV2"</item>
@@ -173,11 +154,6 @@
     <item msgid="1804537219968457989">"IMSI"</item>
     <item msgid="3441876902463317017">"GID"</item>
   </string-array>
-  <string-array name="app_install_location_entries">
-    <item msgid="3771157789865587832">"Armazenamento de dispositivo interno"</item>
-    <item msgid="5501345333507193420">"Cartão SD amovível"</item>
-    <item msgid="2362840341195111674">"Permitir que seja o sistema a decidir"</item>
-  </string-array>
   <string-array name="app_ops_summaries">
     <item msgid="8837238583601420163">"localização aproximada"</item>
     <item msgid="3205182755091629995">"localização exata"</item>
@@ -233,7 +209,7 @@
     <item msgid="8321845997769724385">"ler estado do telemóvel"</item>
     <item msgid="8319500905789302082">"adicionar correio de voz"</item>
     <item msgid="1745447762712473288">"utilizar SIP"</item>
-    <item msgid="2986821801246709737">"processar chamada efetuada"</item>
+    <item msgid="2986821801246709737">"processar chamada feita"</item>
     <item msgid="2702338156976571452">"impressão digital"</item>
     <item msgid="7925495329948404955">"sensores de corpo"</item>
     <item msgid="8163066895749904470">"ler difusões celulares"</item>
@@ -300,7 +276,7 @@
     <item msgid="973363520315356844">"Ler estado do telemóvel"</item>
     <item msgid="1203157739257425062">"Adicionar correio de voz"</item>
     <item msgid="9143978647977300187">"Utilizar SIP"</item>
-    <item msgid="3053060162752878562">"Processar chamada efetuada"</item>
+    <item msgid="3053060162752878562">"Processar chamada feita"</item>
     <item msgid="4480721672278100858">"Impressão digital"</item>
     <item msgid="7883743426029759112">"Sensores de corpo"</item>
     <item msgid="2546206711741159825">"Ler difusões celulares"</item>
