--- a/res/values-ro/arrays.xml
+++ b/res/values-ro/arrays.xml
@@ -106,7 +106,7 @@
     <!-- no translation found for wifi_tether_security:3 (5512131148045414341) -->
   <string-array name="eap_ocsp_type">
     <item msgid="8568170800958331461">"Nu verifica"</item>
-    <item msgid="5703177653586269306">"Solicitați starea certificatelor"</item>
+    <item msgid="5703177653586269306">"Solicită starea certificatelor"</item>
     <item msgid="326388247868439528">"Solicită obligatoriu starea certificatelor"</item>
   </string-array>
   <string-array name="wifi_p2p_wps_setup">
@@ -272,7 +272,7 @@
     <item msgid="5272927168355895681">"volumul alarmei"</item>
     <item msgid="4422070755065530548">"volum notificări"</item>
     <item msgid="3250654589277825306">"volumul Bluetooth"</item>
-    <item msgid="4212187233638382465">"mențineți activ"</item>
+    <item msgid="4212187233638382465">"menține activ"</item>
     <item msgid="5099026183238335900">"monitorizarea locației"</item>
     <item msgid="2297727967385895059">"monitorizarea localizării cu consum ridicat de energie"</item>
     <item msgid="8700593962030471569">"obțineți statistici de utilizare"</item>
@@ -321,7 +321,7 @@
     <item msgid="1030342664910454057">"Primește mesaje SMS/MMS"</item>
     <item msgid="9189359977063200554">"Trimite mesaje SMS/MMS"</item>
     <item msgid="6954817837534799424">"Citește mesaje SMS/MMS"</item>
-    <item msgid="7921014514153395846">"Scrieți mesaje SMS/MMS"</item>
+    <item msgid="7921014514153395846">"Scrie mesaje SMS/MMS"</item>
     <item msgid="8997371825401751421">"Modifică setările"</item>
     <item msgid="7005755175240764443">"Desenează deasupra"</item>
     <item msgid="8267704990417682222">"Accesează notificări"</item>
@@ -509,7 +509,7 @@
     <item msgid="2047166446768045816">"Tratează ca fiind necontorizată"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
-    <item msgid="3485945604919292489">"Folosiți o adresă MAC aleatorie (prestabilit)"</item>
+    <item msgid="3485945604919292489">"Folosește o adresă MAC aleatorie (prestabilit)"</item>
     <item msgid="741680937828608749">"Folosește adresa MAC a dispozitivului"</item>
   </string-array>
   <string-array name="wifi_hidden_entries">
