--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1650,4 +1650,9 @@
          [CHAR LIMIT=NONE] -->
     <string-array name="allowlist_hide_summary_in_battery_usage" translatable="false">
     </string-array>
+
+    <!-- Array containing help message codes that should not be displayed
+         during fingerprint enrollment. -->
+    <integer-array name="fingerprint_acquired_ignore_list">
+    </integer-array>
 </resources>
