--- a/res/xml/special_access.xml
+++ b/res/xml/special_access.xml
@@ -103,6 +103,7 @@
         android:key="data_saver"
         android:title="@string/unrestricted_data_saver"
         android:fragment="com.android.settings.datausage.UnrestrictedDataAccess"
+        settings:isPreferenceVisible="@bool/config_show_data_saver"
         settings:controller="com.android.settings.applications.specialaccess.DataSaverController" />
 
     <Preference
