Revert "Implement SFPS “require screen on to auth”"
Revert submission 20298870-cherrypick-require-screen-on-to-auth-bx2kw8azs3

Reason for revert: broken KeyguardUpdateMonitorTest
Bug: 256762678
Reverted Changes:
Id58879642:Implement SFPS “require screen on to auth”
Ibc55dfa66:Implement SFPS “require screen on to auth”

Change-Id: I772f6a1b3fa366bc10b200f365df79417eceb8ef

Former-commit-id: e62d37bad67280373d4d9f98496da1964d76a92f

--- a/res/xml/security_settings_fingerprint.xml
+++ b/res/xml/security_settings_fingerprint.xml
@@ -16,20 +16,5 @@
 
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:settings="http://schemas.android.com/apk/res-auto"
-    android:title="@string/security_settings_fingerprint_preference_title">
+    android:title="@string/security_settings_fingerprint_preference_title"/>
 
-    <PreferenceCategory
-        android:key="security_settings_fingerprint_unlock_category"
-        android:title="@string/security_settings_fingerprint_settings_preferences_category"
-        settings:controller="com.android.settings.biometrics.fingerprint.FingerprintUnlockCategoryPreferenceController">
-
-        <com.android.settingslib.RestrictedSwitchPreference
-            android:key="security_settings_require_screen_on_to_auth"
-            android:title="@string/security_settings_require_screen_on_to_auth_title"
-            android:summary="@string/security_settings_require_screen_on_to_auth_description"
-            settings:keywords="@string/security_settings_require_screen_on_to_auth_keywords"
-            settings:controller="com.android.settings.biometrics.fingerprint.FingerprintSettingsRequireScreenOnToAuthPreferenceController" />
-    </PreferenceCategory>
-
-</PreferenceScreen>
