[Settings] Improve PremiumSMS's auto test
Fix PremiumSMS's test case when config_show_premium_sms is false.

Bug: 240515161
Test: test cases and local testing
Change-Id: I3f1710bcf2c123553af7646c030bfe87f569324a

Former-commit-id: dae659e35894c12fe83f1990e072a8dcb50e6dd6

--- a/res/xml/special_access.xml
+++ b/res/xml/special_access.xml
@@ -97,6 +97,7 @@
         android:key="premium_sms"
         android:title="@string/premium_sms_access"
         android:fragment="com.android.settings.applications.specialaccess.premiumsms.PremiumSmsAccess"
+        settings:isPreferenceVisible="@bool/config_show_premium_sms"
         settings:controller="com.android.settings.applications.specialaccess.premiumsms.PremiumSmsController" />
 
     <Preference
